<resources>
    <string name="app_name">Photo map</string>

    <string name="file_provider_authority">${applicationId}.provider</string>

    <string name="title_activity_user_details">Photo owner</string>
    <string name="title_navigation_map">Map</string>
    <string name="title_navigation_favorites">Favorites</string>
    <string name="title_navigation_settings">Settings</string>

    <string name="pref_title_vk_sign_in">Vk sign in</string>
    <string name="pref_title_vk_sign_out">Vk sign out</string>
    <string name="pref_title_friends_photo">Only friends photo</string>
    <string name="pref_summary_friends_photo">Show only your friends\' photo from vk</string>
    <string name="pref_key_friends_photo">pref_key_friends_photo</string>
    <string name="pref_key_vk_sign_in">pref_btn_sign_in</string>
    <string name="pref_key_markers_type">pref_key_markers_type</string>
    <string name="pref_title_markers_type">Type of markers</string>
    <string name="pref_summary_markers_type">Choose the type of map markers. Default markers require fewer resources of the device</string>
    <string name="pref_dialog_title_markers_type">Markers type</string>
    <string name="pref_default_markers_type">default_markers_type</string>

    <string name="hint_empty_list">There are no items in the list at the moment</string>

    <string name="toast_download_success">Successful download</string>
    <string name="toast_download_error">Download error</string>
    <string name="toast_available_soon">Will be available soon!</string>
    <string name="toast_network_error">Network error</string>
    <string name="toast_groups_not_supported">Groups are not supported yet</string>

    <string name="chooser_title_share_photo">Share photo</string>

    <string name="template_sharing_photo_text">Origin: %s\nPhoto taken by: %s\nSent from Photo Map application.</string>
    <string name="template_sharing_photo_text_with_description">Origin: %s\n%s\nPhoto taken by: %s\nSent from Photo Map application.</string>
</resources>
